--- a/setup.cfg
+++ b/setup.cfg
@@ -45,6 +45,7 @@ install_requires = numpy>=1.13; qtpy>=1.1; astropy>=3
 
 [options.extras_require]
 recommended = pillow>=3.2.0; scipy>=0.18.1; matplotlib>=1.5.1; opencv-python>=3.4.1; piexif>=1.0.13; beautifulsoup4>=4.3.2
+test = pytest-astropy
 docs = sphinx-astropy
 gtk3 = pycairo; pygobject
 qt5 = PyQt5; QtPy>=1.1
