BUG: Fix CLI entry points

--- a/setup.cfg
+++ b/setup.cfg
@@ -62,9 +62,10 @@ ginga.opencl = trcalc.cl
 ginga.tests = coveragerc
 ginga.web.pgw = templates/*.html, js/*.js
 
-[entry_points]
-ginga = ginga.rv.main:_main
-ggrc = ginga.misc.grc:_main
+[options.entry_points]
+console_scripts =
+    ginga = ginga.rv.main:_main
+    ggrc = ginga.misc.grc:_main
 
 [flake8]
 # Ignoring these for now:
