--- a/setup.cfg
+++ b/setup.cfg
@@ -42,6 +42,7 @@ zip_safe = False
 packages = find:
 python_requires = >=3.5
 install_requires = numpy>=1.13; qtpy>=1.1; astropy>=3
+setup_requires = setuptools_scm
 
 [options.extras_require]
 recommended = pillow>=3.2.0; scipy>=0.18.1; matplotlib>=1.5.1; opencv-python>=3.4.1; piexif>=1.0.13; beautifulsoup4>=4.3.2
