MNT: Move coveragerc to setup.cfg

--- a/setup.cfg
+++ b/setup.cfg
@@ -60,7 +60,6 @@ ginga.fonts = */*.ttf, */*.txt
 ginga.gtk3w = gtk_css
 ginga.icons = *.ppm, *.png
 ginga.opencl = trcalc.cl
-ginga.tests = coveragerc
 ginga.web.pgw = templates/*.html, js/*.js
 
 [options.entry_points]
@@ -81,3 +80,43 @@ console_scripts =
 # W504: line break after binary operator
 # F841: local variable '%s' is assigned to but never used
 ignore = E129,E265,E266,E402,E501,E741,I100,I101,W504,F841
+
+[coverage:run]
+source = ginga
+omit =
+    ginga/_astropy_init*
+    ginga/conftest*
+    ginga/cython_version*
+    ginga/setup_package*
+    ginga/*/setup_package*
+    ginga/*/*/setup_package*
+    ginga/tests/*
+    ginga/*/tests/*
+    ginga/*/*/tests/*
+    ginga/version*
+    */ginga/_astropy_init*
+    */ginga/conftest*
+    */ginga/cython_version*
+    */ginga/setup_package*
+    */ginga/*/setup_package*
+    */ginga/*/*/setup_package*
+    */ginga/tests/*
+    */ginga/*/tests/*
+    */ginga/*/*/tests/*
+    */ginga/version*
+
+[coverage:report]
+exclude_lines =
+    # Have to re-enable the standard pragma
+    pragma: no cover
+    # Don't complain about packages we have installed
+    except ImportError
+    # Don't complain if tests don't hit assertions
+    raise AssertionError
+    raise NotImplementedError
+    # Don't complain about script hooks
+    def main\(.*\):
+    # Ignore branches that don't pertain to this version of Python
+    pragma: py{ignore_python_version}
+    # Don't complain about IPython completion helper
+    def _ipython_key_completions_
