Fix github issue #829
Install `sphinx_rtd_theme` when doing "pip isntall -e .[docs]"

--- a/setup.cfg
+++ b/setup.cfg
@@ -47,7 +47,7 @@ setup_requires = setuptools_scm
 [options.extras_require]
 recommended = pillow>=3.2.0; scipy>=0.18.1; matplotlib>=1.5.1; opencv-python>=3.4.1; piexif>=1.0.13; beautifulsoup4>=4.3.2
 test = attrs>=19.2.0; pytest-astropy
-docs = sphinx-astropy
+docs = sphinx-astropy; sphinx_rtd_theme
 gtk3 = pycairo; pygobject
 qt5 = PyQt5; QtPy>=1.1
 tk = aggdraw
