MNT: Ignore import error in pytest collection

--- a/setup.cfg
+++ b/setup.cfg
@@ -3,7 +3,7 @@ minversion = 3
 testpaths = "ginga" "doc"
 norecursedirs = build doc/_build
 astropy_header = true
-addopts = -p no:warnings
+addopts = -p no:warnings --doctest-ignore-import-errors
 
 [bdist_wheel]
 universal = 1
