Added twofer example
- added cuts configuration to Preferences plugin

--- a/ginga/examples/layouts/ds9ish/bindings.cfg
+++ b/ginga/examples/layouts/ds9ish/bindings.cfg
@@ -21,6 +21,8 @@ btn_nobtn = 0x0
 btn_left  = 0x1
 btn_middle= 0x2
 btn_right = 0x4
+btn_back = 0x8
+btn_forward = 0x10
 
 # Set up our standard modifiers.
 # These should not contain "normal" keys--they should be valid modifier
@@ -92,6 +94,8 @@ kp_center = ['c', 'pan+c', 'freepan+c']
 kp_cut_255 = ['cuts+A']
 kp_cut_minmax = ['cuts+S']
 kp_cut_auto = ['a', 'cuts+a']
+kp_autocuts_alg_prev = ['cuts+up', 'cuts+b']
+kp_autocuts_alg_next = ['cuts+down', 'cuts+n']
 kp_autocuts_toggle = [':', 'cuts+:']
 kp_autocuts_override = [';', 'cuts+;']
 kp_autocenter_toggle = ['?', 'pan+?']
@@ -110,8 +114,9 @@ kp_flip_x = ['[', '{', 'rotate+[', 'rotate+{']
 kp_flip_y = [']', '}', 'rotate+]', 'rotate+}']
 kp_swap_xy = ['backslash', '|', 'rotate+backslash', 'rotate+|']
 kp_rotate_reset = ['R', 'rotate+R']
-kp_rotate_inc90 = [',', 'rotate+.']
-kp_rotate_dec90 = ['.', 'rotate+,']
+kp_save_profile = ['S']
+kp_rotate_inc90 = ['.', 'rotate+.']
+kp_rotate_dec90 = [',', 'rotate+,']
 kp_orient_lh = ['o', 'rotate+o']
 kp_orient_rh = ['O', 'rotate+O']
 kp_poly_add = ['v', 'draw+v']
@@ -198,6 +203,7 @@ pi_zoom_origin = ['shift+pinch']
 pa_pan = ['pan']
 pa_zoom = ['freepan+pan']
 pa_zoom_origin = ['freepan+shift+pan']
+pa_naxis = ['naxis+pan']
 
 # This controls what operations the pinch gesture controls.  Possibilities are
 # (empty list or) some combination of 'zoom' and 'rotate'.
@@ -214,8 +220,11 @@ pan_multiplier = 1.0
 # ds9 uses opposite sense of zooming scroll wheel
 zoom_scroll_reverse = True
 
+pan_min_scroll_thumb_pct = 0.0
+pan_max_scroll_thumb_pct = 0.9
+
 # No messages for color map warps or setting pan position
-msg_cmap = False
+#msg_cmap = False
 msg_panset = False
 
 #END
