Use JSON-formatted layout and plugin files (#763)
Adds ability to use JSON formatted config files to change UI layout or configure plugins

Co-authored-by: P. L. Lim <2090236+pllim@users.noreply.github.com>

* Added "ds9ish", "twofer" and "standard" layout examples
* added cuts configuration to Preferences plugin
* Minor fixes or improvements to some plugins uncovered by testing with different layouts
* Updated customization documentation

--- a/ginga/examples/configs/general.cfg
+++ b/ginga/examples/configs/general.cfg
@@ -60,10 +60,13 @@ widgetSet = 'choose'
 #widgetSet = 'qt4'
 
 # Speeds up rotation a lot if you have python OpenCv module!
-# warning: OpenCv is buggy for some Mac OS X version/installations and causes
-# a crash *on import* so we can't just try to import it to see if available.
 # Enable this if you have it installed and can import "cv2" without problems.
+# NOTE: OpenCv is now used by default if it is installed
 #use_opencv = True
+
+# Enables the "opengl" renderer for backends Qt and Gtk
+# NOTE: some minor features are not supported well under OpenGL yet
+use_opengl = False
 
 # Force of package for handling WCS
 # Possibilities are 'choose', 'kapteyn', 'astlib', 'starlink', 'astropy',
@@ -96,10 +99,15 @@ icc_working_profile = "sRGB"
 # NOTE: overridden by channel setting of the same name, if any
 scrollbars = 'auto'
 
+# Name of a layout file in ~/.ginga that specifies the UI layout of the
+# program (default is 'layout.json').  This is only used if 'save_layout'
+# (see below) is True
+layout_file = 'layout.json'
+
 # Set this to True to have Ginga remember the size and position of the
-# last session. This creates/loads ~/.ginga/layout file.
+# last session. This creates/loads the layout file specified by 'layout_file'
 # If you experience trouble starting up Ginga, you may need to either
-# remove the ~/.ginga/layout file and restart the program, or start with
+# remove the layout file and restart the program, or start with
 # the --norestore option
 # Setting this to False would cause Ginga to ignore the file, if exists.
 save_layout = True
@@ -132,3 +140,10 @@ channel_prefix = "Image"
 # Default value of None will use an area in the standard platform-specific
 # temp directory (as defined by Python's 'tempfile' module)
 #download_folder = None
+
+# Name of a layout file to configure the GUI
+layout_file = 'layout.json'
+
+# Name of a file to configure the set of available plugins and where they
+# should appear
+plugin_file = 'plugins.json'
