--- a/ginga/examples/configs/plugin_Catalogs.cfg
+++ b/ginga/examples/configs/plugin_Catalogs.cfg
@@ -7,3 +7,29 @@ draw_type = 'circle'
 select_color = 'skyblue'
 color_outline = 'aquamarine'
 click_radius = 10
+
+# catalog sources
+# Format: list of dicts
+# Each dict defines a source, and has the following fields:
+#   shortname: str, the short name appearing in the control for selecting a source
+#               in the plugin
+#   fullname: str, the full name, should correspond *exactly* with the name required
+#               by astroquery.vo.conesearch "catalog" parameter
+#   type: str, should be "astroquery.vo" for an astroquery.vo.conesearch function
+#   mapping: a nested dict providing the mapping for the return results to the GUI,
+#            in terms of field name to Ginga table.
+#            There must be keys for 'id', 'ra' and 'dec'. 'mag', if present, can be
+#            a list of field names that define magnitudes of the elements in various
+#            wavelengths.
+#
+catalog_sources = [
+    {'shortname': "GSC 2.3", 'fullname': "Guide Star Catalog 2.3 Cone Search 1",
+     'type': 'astroquery.vo',
+     'mapping': {'id': 'objID', 'ra': 'ra', 'dec': 'dec', 'mag': ['Mag']}},
+    {'shortname': "USNO-A2.0 1", 'fullname': "The USNO-A2.0 Catalogue (Monet+ 1998) 1",
+     'type': 'astroquery.vo',
+     'mapping': {'id': 'USNO-A2.0', 'ra': 'RAJ2000', 'dec': 'DEJ2000', 'mag': ['Bmag', 'Rmag']}},
+    {'shortname': "2MASS 1", 'fullname': "Two Micron All Sky Survey (2MASS) 1",
+     'type': 'astroquery.vo',
+     'mapping': {'id': 'htmID', 'ra': 'ra', 'dec': 'dec', 'mag': []}},
+    ]
