Apply suggestions from code review
Co-authored-by: P. L. Lim <2090236+pllim@users.noreply.github.com>

--- a/ginga/examples/configs/plugin_Catalogs.cfg
+++ b/ginga/examples/configs/plugin_Catalogs.cfg
@@ -14,8 +14,8 @@ click_radius = 10
 #   shortname: str, the short name appearing in the control for selecting a source
 #               in the plugin
 #   fullname: str, the full name, should correspond *exactly* with the name required
-#               by astroquery.vo.conesearch "catalog" parameter
-#   type: str, should be "astroquery.vo" for an astroquery.vo.conesearch function
+#               by astroquery.vo_conesearch "catalog" parameter
+#   type: str, should be "astroquery.vo_conesearch" for an astroquery.vo_conesearch function
 #   mapping: a nested dict providing the mapping for the return results to the GUI,
 #            in terms of field name to Ginga table.
 #            There must be keys for 'id', 'ra' and 'dec'. 'mag', if present, can be
@@ -24,12 +24,12 @@ click_radius = 10
 #
 catalog_sources = [
     {'shortname': "GSC 2.3", 'fullname': "Guide Star Catalog 2.3 Cone Search 1",
-     'type': 'astroquery.vo',
+     'type': 'astroquery.vo_conesearch',
      'mapping': {'id': 'objID', 'ra': 'ra', 'dec': 'dec', 'mag': ['Mag']}},
     {'shortname': "USNO-A2.0 1", 'fullname': "The USNO-A2.0 Catalogue (Monet+ 1998) 1",
-     'type': 'astroquery.vo',
+     'type': 'astroquery.vo_conesearch',
      'mapping': {'id': 'USNO-A2.0', 'ra': 'RAJ2000', 'dec': 'DEJ2000', 'mag': ['Bmag', 'Rmag']}},
     {'shortname': "2MASS 1", 'fullname': "Two Micron All Sky Survey (2MASS) 1",
-     'type': 'astroquery.vo',
+     'type': 'astroquery.vo_conesearch',
      'mapping': {'id': 'htmID', 'ra': 'ra', 'dec': 'dec', 'mag': []}},
     ]
