--- a/.github/workflows/ci_workflows.yml
+++ b/.github/workflows/ci_workflows.yml
@@ -9,7 +9,7 @@ on:
     - cron: '0 6 * * 1'
 
 jobs:
-  pep:
+  pep_and_audit:
     runs-on: ubuntu-latest
     steps:
     - name: Checkout code
@@ -30,6 +30,10 @@ jobs:
         python -m pip install --upgrade setuptools pep517 twine
         python -m pep517.build --source .
         twine check dist/*
+    - name: Security audit
+      run: |
+        python -m pip install --upgrade bandit
+        bandit -r . -c .bandit.yaml
 
   multi_oses:
     runs-on: ${{ matrix.os }}
