--- a/.github/workflows/ci_workflows.yml
+++ b/.github/workflows/ci_workflows.yml
@@ -69,7 +69,7 @@ jobs:
     - name: Install and build
       run: |
         python -m pip install --upgrade pip setuptools
-        python -m pip install PyQt5 numpy==1.16
+        python -m pip install PyQt5 numpy==1.16 astropy==3.2
         python -m pip install -e .[test]
     - name: Install Qt
       uses: jurplel/install-qt-action@8ffcd60
