Let Pick use iqcalc vs iqcalc_astropy

--- a/ginga/examples/configs/plugin_Pick.cfg
+++ b/ginga/examples/configs/plugin_Pick.cfg
@@ -50,6 +50,9 @@ show_candidates = False
 # calculation:
 calc_center_alg = 'centroid'
 
+# Library to use for FWHM fitting ("native" or "astropy")
+calc_fwhm_lib = 'native'
+
 # Fitting function to use for FWHM ("gaussian" or "moffat")
 calc_fwhm_alg = 'gaussian'
 
@@ -66,4 +69,3 @@ record_picks = True
 
 # Set this to a file name, if None a filename will be automatically chosen
 report_log_path = None
-
