DOC: Pin setuptools for RTD

--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -10,7 +10,7 @@ sphinx:
 # Set the version of Python and requirements required to build your docs
 python:
   version: 3.7
-  system_packages: true
+  system_packages: false
   install:
     - method: pip
       path: .
