Incorporate photutils into iqcalc_astropy.

--- a/setup.cfg
+++ b/setup.cfg
@@ -43,7 +43,7 @@ install_requires = numpy>=1.13; qtpy>=1.1; astropy>=3.2
 setup_requires = setuptools_scm
 
 [options.extras_require]
-recommended = pillow>=3.2.0; scipy>=0.18.1; matplotlib>=2.1; opencv-python>=3.4.1; piexif>=1.0.13; beautifulsoup4>=4.3.2; docutils
+recommended = pillow>=3.2.0; scipy>=0.18.1; photutils; matplotlib>=2.1; opencv-python>=3.4.1; piexif>=1.0.13; beautifulsoup4>=4.3.2; docutils
 test = attrs>=19.2.0; pytest-astropy
 docs = sphinx-astropy; sphinx_rtd_theme
 gtk3 = pycairo; pygobject
