--- a/.github/workflows/ci_workflows.yml
+++ b/.github/workflows/ci_workflows.yml
@@ -9,32 +9,6 @@ on:
     - cron: '0 6 * * 1'
 
 jobs:
-  pep_and_audit:
-    runs-on: ubuntu-latest
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
-    - name: Fetch tags
-      run: git fetch --prune --unshallow --tags
-    - name: Set up Python
-      uses: actions/setup-python@v2
-      with:
-        python-version: '3.x'
-    - name: Lint with flake8
-      run: |
-        python -m pip install --upgrade pip flake8
-        flake8 ginga --count
-    # Make sure that packaging will work
-    - name: pep517 build
-      run: |
-        python -m pip install --upgrade setuptools pep517 twine
-        python -m pep517.build --source .
-        twine check dist/*
-    - name: Security audit
-      run: |
-        python -m pip install --upgrade bandit
-        bandit -r . -c .bandit.yaml
-
   multi_oses:
     runs-on: ${{ matrix.os }}
     strategy:
@@ -53,72 +27,9 @@ jobs:
       run: |
         python -m pip install --upgrade pip setuptools
         python -m pip install PyQt5 scipy
+        python -m pip install astropy==4.1rc2
         python -m pip install -e .[test]
     - name: Install Qt
       uses: jurplel/install-qt-action@8ffcd60
     - name: Run tests
       run: pytest --pyargs ginga doc -sv
-
-  older_deps_tests:
-    runs-on: ubuntu-16.04
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
-    - name: Fetch tags
-      run: git fetch --prune --unshallow --tags
-    - name: Set up Python
-      uses: actions/setup-python@v2
-      with:
-        python-version: '3.7'
-    - name: Install and build
-      run: |
-        python -m pip install --upgrade pip setuptools
-        python -m pip install PyQt5 numpy==1.16 astropy==3.2
-        python -m pip install -e .[test]
-    - name: Install Qt
-      uses: jurplel/install-qt-action@8ffcd60
-    - name: Run tests
-      run: pytest --pyargs ginga doc -sv
-
-  dev_deps_tests:
-    runs-on: ubuntu-latest
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
-    - name: Fetch tags
-      run: git fetch --prune --unshallow --tags
-    - name: Set up Python
-      uses: actions/setup-python@v2
-      with:
-        python-version: '3.x'
-    - name: Install and build
-      run: |
-        python -m pip install --upgrade pip setuptools
-        python -m pip install PyQt5 matplotlib
-        python -m pip install git+https://github.com/astropy/astropy.git@master#egg=astropy
-        python -m pip install -e .[test]
-    - name: Install Qt
-      uses: jurplel/install-qt-action@8ffcd60
-    - name: Run tests
-      run: pytest --pyargs ginga doc -sv
-
-  conda_linux_tests:
-    runs-on: ubuntu-latest
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
-    - name: Fetch tags
-      run: git fetch --prune --unshallow --tags
-    - name: Set up Python
-      uses: actions/setup-python@v2
-      with:
-        python-version: '3.x'
-    - name: Install and build
-      run: |
-        # $CONDA is an environment variable pointing to the root of the miniconda directory
-        $CONDA/bin/conda install pip setuptools setuptools_scm
-        $CONDA/bin/conda install qtpy pyqt matplotlib
-        $CONDA/bin/conda install attrs astropy pytest-astropy -c conda-forge
-        $CONDA/bin/pip install -e .
-    - name: Run tests
-      run: $CONDA/bin/pytest --pyargs ginga doc -sv
