--- a/.github/workflows/ci_workflows.yml
+++ b/.github/workflows/ci_workflows.yml
@@ -25,10 +25,10 @@ jobs:
         python -m pip install --upgrade pip flake8
         flake8 ginga --count
     # Make sure that packaging will work
-    - name: pep517 build
+    - name: PEP 517 build
       run: |
-        python -m pip install --upgrade setuptools pep517 twine
-        python -m pep517.build --source .
+        python -m pip install --upgrade setuptools build twine
+        python -m build --sdist .
         twine check dist/*
     - name: Security audit
       run: |
