--- a/.github/workflows/ci_workflows.yml
+++ b/.github/workflows/ci_workflows.yml
@@ -80,6 +80,7 @@ jobs:
     - name: Run tests
       run: pytest --pyargs ginga doc -sv
 
+  # TODO: Lift Python 3.8 pin when numpy and scipy have wheels for Python 3.9
   dev_deps_tests:
     runs-on: ubuntu-latest
     steps:
@@ -90,7 +91,7 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v2
       with:
-        python-version: '3.x'
+        python-version: '3.8'
     - name: Install and build
       run: |
         python -m pip install --upgrade pip setuptools
