--- a/.github/workflows/ci_workflows.yml
+++ b/.github/workflows/ci_workflows.yml
@@ -9,8 +9,31 @@ on:
     - cron: '0 6 * * 1'
 
 jobs:
+  cancel_ci:
+    name: Mandatory checks before CI
+    runs-on: ubuntu-latest
+    steps:
+    # Base branch check should run whether we skip CI or not
+    - name: Check base branch
+      uses: pllim/action-check_pr_basebranch@main
+      with:
+        BASEBRANCH_NAME: master
+        SKIP_BASEBRANCH_CHECK_LABEL: skip-basebranch-check
+    - name: Failure means CI is skipped on purpose
+      uses: pllim/action-skip-ci@main
+      with:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    # This should only run if we did not skip CI
+    - name: Cancel Previous Runs
+      uses: styfle/cancel-workflow-action@ce17749
+      with:
+        access_token: ${{ secrets.GITHUB_TOKEN }}
+
+  # The rest only run if above are done
+
   pep_and_audit:
     runs-on: ubuntu-latest
+    needs: cancel_ci
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
@@ -27,9 +50,9 @@ jobs:
     # Make sure that packaging will work
     - name: PEP 517 build
       run: |
-        python -m pip install --upgrade setuptools build twine
+        python -m pip install --upgrade setuptools build "twine>=3.3"
         python -m build --sdist .
-        twine check dist/*
+        twine check --strict dist/*
     - name: Security audit
       run: |
         python -m pip install --upgrade bandit
@@ -37,6 +60,7 @@ jobs:
 
   multi_oses:
     runs-on: ${{ matrix.os }}
+    needs: cancel_ci
     strategy:
       matrix:
         os: [windows-latest, macos-latest, ubuntu-latest]
@@ -61,6 +85,7 @@ jobs:
 
   older_deps_tests:
     runs-on: ubuntu-16.04
+    needs: cancel_ci
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
@@ -80,9 +105,9 @@ jobs:
     - name: Run tests
       run: pytest --pyargs ginga doc -sv
 
-  # TODO: Lift Python 3.8 pin when numpy and scipy have wheels for Python 3.9
   dev_deps_tests:
     runs-on: ubuntu-latest
+    needs: cancel_ci
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
@@ -91,7 +116,7 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v2
       with:
-        python-version: '3.8'
+        python-version: '3.x'
     - name: Install and build
       run: |
         python -m pip install --upgrade pip setuptools
@@ -105,6 +130,7 @@ jobs:
 
   conda_linux_tests:
     runs-on: ubuntu-latest
+    needs: cancel_ci
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
