TST: Stop ignoring warnings

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,9 +1,9 @@
 [tool:pytest]
-minversion = 3
+minversion = 5
 testpaths = "ginga" "doc"
 norecursedirs = build doc/_build
 astropy_header = true
-addopts = -p no:warnings --doctest-ignore-import-errors
+addopts = --doctest-ignore-import-errors
 
 [bdist_wheel]
 universal = 1
