TST: Ignore a warning, turn the rest into error

--- a/setup.cfg
+++ b/setup.cfg
@@ -4,6 +4,9 @@ testpaths = "ginga" "doc"
 norecursedirs = build doc/_build
 astropy_header = true
 addopts = --doctest-ignore-import-errors
+filterwarnings =
+    error
+    ignore:numpy.ndarray size changed:RuntimeWarning
 
 [bdist_wheel]
 universal = 1
