TST: Ignore another numpy size warning

--- a/setup.cfg
+++ b/setup.cfg
@@ -7,6 +7,7 @@ addopts = --doctest-ignore-import-errors
 filterwarnings =
     error
     ignore:numpy.ndarray size changed:RuntimeWarning
+    ignore:numpy.ufunc size changed:RuntimeWarning
 
 [bdist_wheel]
 universal = 1
