TST: Stop ignoring warnings (#932)
* TST: Stop ignoring warnings
* TST: Ignore numpy size warnings, turn the rest into error

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,9 +1,13 @@
 [tool:pytest]
-minversion = 3
+minversion = 5
 testpaths = "ginga" "doc"
 norecursedirs = build doc/_build
 astropy_header = true
-addopts = -p no:warnings --doctest-ignore-import-errors
+addopts = --doctest-ignore-import-errors
+filterwarnings =
+    error
+    ignore:numpy.ndarray size changed:RuntimeWarning
+    ignore:numpy.ufunc size changed:RuntimeWarning
 
 [bdist_wheel]
 universal = 1
