Add option to specify radius for total EE.
Fix background subtraction.

--- a/ginga/examples/configs/plugin_Pick.cfg
+++ b/ginga/examples/configs/plugin_Pick.cfg
@@ -60,6 +60,12 @@ calc_fwhm_alg = 'gaussian'
 delta_sky = 0.0
 delta_bright = 0.0
 
+# Encircled and ensquared energy (EE) calculations:
+# a. Radius (pixel) where EE fraction is expected to be 1.
+ee_total_radius = 10.0
+# b. Radius (pixel) to sample EE for reporting.
+ee_sampling_radius = 2.5
+
 # use a different color/intensity map than channel image?
 pick_cmap_name = None
 pick_imap_name = None
