--- a/.github/workflows/ci_workflows.yml
+++ b/.github/workflows/ci_workflows.yml
@@ -118,7 +118,7 @@ jobs:
         # $CONDA is an environment variable pointing to the root of the miniconda directory
         $CONDA/bin/conda install pip setuptools setuptools_scm
         $CONDA/bin/conda install qtpy pyqt matplotlib
-        $CONDA/bin/conda install attrs astropy pytest-astropy -c conda-forge
+        $CONDA/bin/conda install attrs "astropy>=4" pytest-astropy -c conda-forge
         $CONDA/bin/pip install -e .
     - name: Run tests
       run: $CONDA/bin/pytest --pyargs ginga doc -sv
