More review suggestions

--- a/ginga/examples/configs/plugin_Pick.cfg
+++ b/ginga/examples/configs/plugin_Pick.cfg
@@ -26,7 +26,7 @@ quick_mode = False
 quick_from_peak = True
 # for future use
 quick_update_interval = 0.25
-quick_drag_only = False
+quick_drag_only = True
 
 # should the pick shape recenter on the found object center, if any?
 # useful for "tracking" an object that is moving from image to image
