Remove backward compatible API

--- a/ginga/examples/configs/plugin_Catalogs.cfg
+++ b/ginga/examples/configs/plugin_Catalogs.cfg
@@ -72,7 +72,54 @@ catalog_sources = [
     {'shortname': "2MASS 1",
      'fullname': "Two Micron All Sky Survey (2MASS) 1",
      'type': 'astroquery.vo_conesearch',
-     'mapping': {'id': 'htmID', 'ra': 'ra', 'dec': 'dec', 'mag': []}},
+     'mapping': {'id': 'htmID', 'ra': 'ra', 'dec': 'dec',
+                 'mag': ['h_m', 'j_m', 'k_m']}},
+    ]
+
+
+# IMAGE SOURCES
+#
+# Format: list of dicts
+# Each dict defines a source, and has the following fields:
+#   shortname: str
+#       the string that should correspond *exactly* with the name required
+#       by astroquery.skyview "survey" parameter for get_image_list()
+#
+#   fullname: str
+#       the full name, mostly descriptive
+#
+#   type: str
+#       should be "astroquery.image"
+#
+#   source: str
+#       should be "skyview"
+#
+#
+image_sources = [
+    {'shortname': "DSS",
+     'fullname': "Digital Sky Survey 1",
+     'type': 'astroquery.image',
+     'source': 'skyview'},
+    {'shortname': "DSS1 Blue",
+     'fullname': "Digital Sky Survey 1 Blue",
+     'type': 'astroquery.image',
+     'source': 'skyview'},
+    {'shortname': "DSS1 Red",
+     'fullname': "Digital Sky Survey 1 Red",
+     'type': 'astroquery.image',
+     'source': 'skyview'},
+    {'shortname': "DSS2 Red",
+     'fullname': "Digital Sky Survey 2 Red",
+     'type': 'astroquery.image',
+     'source': 'skyview'},
+    {'shortname': "DSS2 Blue",
+     'fullname': "Digital Sky Survey 2 Blue",
+     'type': 'astroquery.image',
+     'source': 'skyview'},
+    {'shortname': "DSS2 IR",
+     'fullname': "Digital Sky Survey 2 Infrared",
+     'type': 'astroquery.image',
+     'source': 'skyview'},
     ]
 
 
