TST: Use ubuntu-latest for all Linux jobs

--- a/.github/workflows/ci_workflows.yml
+++ b/.github/workflows/ci_workflows.yml
@@ -60,7 +60,7 @@ jobs:
       run: pytest --pyargs ginga doc -sv
 
   older_deps_tests:
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-latest
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
