--- a/setup.cfg
+++ b/setup.cfg
@@ -44,11 +44,24 @@ classifiers =
 zip_safe = False
 packages = find:
 python_requires = >=3.7
-install_requires = numpy>=1.14; qtpy>=1.1; astropy>=3.2
+install_requires =
+    numpy>=1.14
+    qtpy>=1.1
+    astropy>=3.2
+    importlib-metadata ; python_version == '3.7'
 setup_requires = setuptools_scm
 
 [options.extras_require]
-recommended = pillow>=3.2.0; scipy>=0.18.1; photutils; matplotlib>=2.1; opencv-python>=3.4.1; piexif>=1.0.13; beautifulsoup4>=4.3.2; astroquery>=0.3.5; docutils
+recommended =
+    pillow>=3.2.0
+    scipy>=0.18.1
+    matplotlib>=2.1
+    opencv-python>=3.4.1
+    piexif>=1.0.13
+    beautifulsoup4>=4.3.2
+    astroquery>=0.3.5
+    docutils
+    photutils
 test = attrs>=19.2.0; pytest-astropy
 docs = sphinx-astropy; sphinx_rtd_theme
 gtk3 = pycairo; pygobject
