--- a/.github/workflows/ci_workflows.yml
+++ b/.github/workflows/ci_workflows.yml
@@ -9,32 +9,6 @@ on:
     - cron: '0 6 * * 1'
 
 jobs:
-  pep_and_audit:
-    runs-on: ubuntu-latest
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
-      with:
-        fetch-depth: 0
-    - name: Set up Python
-      uses: actions/setup-python@v2
-      with:
-        python-version: '3.x'
-    - name: Lint with flake8
-      run: |
-        python -m pip install --upgrade pip flake8
-        flake8 ginga --count
-    # Make sure that packaging will work
-    - name: PEP 517 build
-      run: |
-        python -m pip install --upgrade setuptools build twine
-        python -m build --sdist .
-        twine check dist/*
-    - name: Security audit
-      run: |
-        python -m pip install --upgrade bandit
-        bandit -r . -c .bandit.yaml
-
   multi_oses:
     runs-on: ${{ matrix.os }}
     strategy:
@@ -59,49 +33,6 @@ jobs:
     - name: Run tests
       run: pytest --pyargs ginga doc -sv
 
-  older_deps_tests:
-    runs-on: ubuntu-latest
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
-      with:
-        fetch-depth: 0
-    - name: Set up Python
-      uses: actions/setup-python@v2
-      with:
-        python-version: '3.7'
-    - name: Install and build
-      run: |
-        python -m pip install --upgrade pip setuptools
-        python -m pip install PyQt5 numpy==1.16 astropy==3.2
-        python -m pip install -e .[test]
-    - name: Install Qt
-      uses: jurplel/install-qt-action@88f3374475d094ce56ca6a7cc41cfda5a6ec093c  # v2.13.0
-    - name: Run tests
-      run: pytest --pyargs ginga doc -sv
-
-  dev_deps_tests:
-    runs-on: ubuntu-latest
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
-      with:
-        fetch-depth: 0
-    - name: Set up Python
-      uses: actions/setup-python@v2
-      with:
-        python-version: '3.x'
-    - name: Install and build
-      run: |
-        python -m pip install --upgrade pip setuptools
-        python -m pip install PyQt5 matplotlib
-        python -m pip install git+https://github.com/astropy/astropy.git@main#egg=astropy
-        python -m pip install -e .[test]
-    - name: Install Qt
-      uses: jurplel/install-qt-action@88f3374475d094ce56ca6a7cc41cfda5a6ec093c  # v2.13.0
-    - name: Run tests
-      run: pytest --pyargs ginga doc -sv
-
   conda_linux_tests:
     runs-on: ubuntu-latest
     steps:
@@ -118,7 +49,7 @@ jobs:
         # $CONDA is an environment variable pointing to the root of the miniconda directory
         $CONDA/bin/conda install pip setuptools setuptools_scm
         $CONDA/bin/conda install qtpy pyqt matplotlib
-        $CONDA/bin/conda install attrs "astropy>=4" pytest-astropy -c conda-forge
+        $CONDA/bin/conda install attrs pytest-astropy -c conda-forge
         $CONDA/bin/pip install -e .
     - name: Run tests
       run: $CONDA/bin/pytest --pyargs ginga doc -sv
