--- a/setup.cfg
+++ b/setup.cfg
@@ -47,7 +47,7 @@ python_requires = >=3.7
 install_requires =
     numpy>=1.14
     qtpy>=1.1
-    astropy>=3.2
+    astropy==4.3rc1
     importlib-metadata ; python_version == '3.7'
 setup_requires = setuptools_scm
 
