TST: Ignore older_deps deprecation warning

--- a/setup.cfg
+++ b/setup.cfg
@@ -8,6 +8,7 @@ filterwarnings =
     error
     ignore:numpy.ndarray size changed:RuntimeWarning
     ignore:numpy.ufunc size changed:RuntimeWarning
+    ignore:distutils Version classes are deprecated:DeprecationWarning
 
 [bdist_wheel]
 universal = 1
