Further changes to handle inherit_primary_header issue
- fix #988

--- a/ginga/examples/configs/general.cfg
+++ b/ginga/examples/configs/general.cfg
@@ -51,6 +51,9 @@ numImages = 10
 # Inherit keywords from the primary header when loading HDUs.
 inherit_primary_header = False
 
+# Save keywords from the primary header when loading HDUs.
+save_primary_header = True
+
 # Interval for updating the field information under the cursor (sec)
 cursor_interval = 0.050
 
