Add start_server option to RC plugin
- assists debugging issues related to the plugin

--- a/ginga/examples/configs/plugin_RC.cfg
+++ b/ginga/examples/configs/plugin_RC.cfg
@@ -9,3 +9,5 @@ bind_port = 9000
 # host we should bind to (use '' to bind to all interfaces)
 bind_host = 'localhost'
 
+# start server when plugin starts?
+start_server = True
