Make pillow a required package, change piexif to exifread
Since we are planning to deprecate the mock backend, and pillow is used
in many places, as well as being a very common package, this adds pillow
as a requirement.  It also changes the optional piexif package to exifread,
which is a little less code verbose to use, a bit more popular and well
maintained.

This also restores a couple of lines needed in the OpenCv RGB file handler
to make auto-orientation of RGB images work correctly.

--- a/setup.cfg
+++ b/setup.cfg
@@ -49,16 +49,16 @@ install_requires =
     numpy>=1.14
     qtpy>=1.1
     astropy>=3.2
+    pillow>=3.2.0
     importlib-metadata ; python_version == '3.7'
 setup_requires = setuptools_scm
 
 [options.extras_require]
 recommended =
-    pillow>=3.2.0
     scipy>=0.18.1
     matplotlib>=2.1
     opencv-python>=4.5.4.58
-    piexif>=1.0.13
+    exifread>=2.3.2
     beautifulsoup4>=4.3.2
     astroquery>=0.3.5
     docutils
