Updates to ICC color profiling
- fixed a bug with temp file creation for embedded color profiles
- move handling of alpha layer to rgb_cms module

--- a/setup.cfg
+++ b/setup.cfg
@@ -55,6 +55,7 @@ setup_requires = setuptools_scm
 
 [options.extras_require]
 recommended =
+    python-magic>=0.4.15
     scipy>=0.18.1
     matplotlib>=2.1
     opencv-python>=4.5.4.58
