TST: Ability to cancel duplicate builds

--- a/.github/workflows/ci_workflows.yml
+++ b/.github/workflows/ci_workflows.yml
@@ -8,6 +8,11 @@ on:
     # * is a special character in YAML so you have to quote this string
     - cron: '0 6 * * 1'
 
+# Cancel duplicate builds
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
   pep_and_audit:
     runs-on: ubuntu-latest
