Add option to suppress FITS verify warnings from astropy.io.fits

--- a/ginga/examples/configs/general.cfg
+++ b/ginga/examples/configs/general.cfg
@@ -83,6 +83,10 @@ FITSpkg = 'choose'
 #FITSpkg = 'astropy'
 #FITSpkg = 'fitsio'
 
+# set to True to suppress warnings from astropy.io.fits when verifying
+# FITS files
+suppress_fits_warnings = False
+
 # Set python recursion limit
 # NOTE: Python's default of 1000 causes problems for the standard logging
 # package that Ginga uses in certain situations.  Best to increase it a bit.
