Added support for internationalization
This adds support and documentation for translating Ginga's strings
into various languages through Python standards.  As a beginning, a
few example programs are internationalized for "en" (default) or "ja".
A chapter was added in the dev_manual documentation explaining how to
add a new translation.

--- a/setup.cfg
+++ b/setup.cfg
@@ -51,7 +51,8 @@ install_requires =
     astropy>=3.2
     pillow>=6.2.1
     importlib-metadata ; python_version == '3.7'
-setup_requires = setuptools_scm
+setup_requires =
+    setuptools_scm
 
 [options.extras_require]
 recommended =
@@ -79,11 +80,22 @@ ginga.gtk3w = gtk_css
 ginga.icons = *.ppm, *.png, *.svg
 ginga.opengl = glsl/*.vert, glsl/*.frag
 ginga.web.pgw = templates/*.html, js/*.js
+ginga.locale = */LC_MESSAGES/*.mo
 
 [options.entry_points]
 console_scripts =
     ginga = ginga.rv.main:_main
     ggrc = ginga.misc.grc:_main
+
+# for Babel
+[extract_messages]
+input_dirs = ginga
+output_file = ginga/locale/ginga.pot
+
+# for Babel
+[compile_catalog]
+domain = ginga
+directory = ginga/locale
 
 [flake8]
 # Ignoring these for now:
