--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,10 @@
 *.so
 __pycache__
 
+# i18n translation files
+*.pot
+*.mo
+
 # Ignore .c files by default to avoid including generated code. If you want to
 # add a non-generated .c extension, use `git add -f filename.c`.
 *.c
