Added support for internationalization
This adds support and documentation for translating Ginga's strings
into various languages through Python standards.  As a beginning, a
few example programs are internationalized for "en" (default) or "ja".
A chapter was added in the dev_manual documentation explaining how to
add a new translation.

--- a/setup.cfg
+++ b/setup.cfg
@@ -102,6 +102,7 @@ ginga.icons = *.ppm, *.png, *.svg
 ginga.cursors = *.svg, *.toml
 ginga.opengl = glsl/*.vert, glsl/*.frag
 ginga.web.pgw = templates/*.html, js/*.js
+ginga.locale = */LC_MESSAGES/*.mo
 
 [options.entry_points]
 console_scripts =
@@ -127,6 +128,16 @@ ginga_loaders =
     astropy = ginga.util.io.io_fits:AstropyFitsFileHandler
     fitsio = ginga.util.io.io_fits:FitsioFileHandler
     asdf = ginga.util.io.io_asdf:ASDFFileHandler
+
+# for Babel
+[extract_messages]
+input_dirs = ginga
+output_file = ginga/locale/ginga.pot
+
+# for Babel
+[compile_catalog]
+domain = ginga
+directory = ginga/locale
 
 [flake8]
 # Ignoring these for now:
