--- a/setup.cfg
+++ b/setup.cfg
@@ -85,6 +85,19 @@ console_scripts =
     ginga = ginga.rv.main:_main
     ggrc = ginga.misc.grc:_main
 
+ginga_modes =
+    meta = ginga.modes.meta:MetaMode
+    draw = ginga.modes.draw:DrawMode
+    pan = ginga.modes.pan:PanMode
+    freepan = ginga.modes.freepan:FreePanMode
+    cuts = ginga.modes.cuts:CutsMode
+    contrast = ginga.modes.contrast:ContrastMode
+    rotate = ginga.modes.rotate:RotateMode
+    cmap = ginga.modes.cmap:CMapMode
+    dist = ginga.modes.dist:DistMode
+    camera = ginga.modes.camera:CameraMode
+    naxis = ginga.modes.naxis:NaxisMode
+
 [flake8]
 # Ignoring these for now:
 # E129: visually indented line with same indent as next logical line
