Make loaders discoverable
This makes loaders for a Ginga viewer discoverable via entry points.
This will make it possible to write 3rd-party loaders that are not
bundled with Ginga.

Loaders are consolidated in ginga.util.io. Legacy stubs with warning
on import are left in ginga.util.io_rgb and ginga.util.io_fits.

--- a/setup.cfg
+++ b/setup.cfg
@@ -85,6 +85,13 @@ console_scripts =
     ginga = ginga.rv.main:_main
     ggrc = ginga.misc.grc:_main
 
+ginga_loaders =
+    pillow = ginga.util.io.io_rgb:PillowFileHandler
+    opencv = ginga.util.io.io_rgb:OpenCvFileHandler
+    astropy = ginga.util.io.io_fits:AstropyFitsFileHandler
+    fitsio = ginga.util.io.io_fits:FitsioFileHandler
+    asdf = ginga.util.io.io_asdf:ASDFFileHandler
+
 [flake8]
 # Ignoring these for now:
 # E129: visually indented line with same indent as next logical line
