Add a new Ginga SVG icon

--- a/ginga.desktop
+++ b/ginga.desktop
@@ -3,5 +3,6 @@ Type=Application
 Name=Ginga
 Comment=The Ginga astronomical FITS file viewer
 Exec=ginga %F
+Icon=ginga.svg
 Categories=Education;Science;Astronomy;
 MimeType=image/x-fits;
