Modify setup.cfg to install svg icon file

--- a/setup.cfg
+++ b/setup.cfg
@@ -76,7 +76,7 @@ ginga = examples/*/*, examples/*/*/*, web/pgw/js/*.js, web/pgw/js/*.css
 ginga.doc = *.html
 ginga.fonts = */*.ttf, */*.txt
 ginga.gtk3w = gtk_css
-ginga.icons = *.ppm, *.png
+ginga.icons = *.ppm, *.png, *.svg
 ginga.opengl = glsl/*.vert, glsl/*.frag
 ginga.web.pgw = templates/*.html, js/*.js
 
