Use license_files because license_file is deprecated

--- a/setup.cfg
+++ b/setup.cfg
@@ -21,7 +21,7 @@ long_description_content_type = text/plain
 author = Ginga Maintainers
 author_email = eric@naoj.org
 license = BSD
-license_file = LICENSE.txt
+license_files = LICENSE.txt
 url = https://ejeschke.github.io/ginga/
 edit_on_github = False
 github_project = ejeschke/ginga
