Add options for configuring "Image" and "Contour" viewers in Pick plugin
- Pick plugin settings now has options to set the autozoom and autocuts
  settings for the "Image" and "Contour" viewers (see "plugin_Pick.cfg"
  file in .../ginga/examples/configs)
- In addition, you can now set whether you want a ginga or a matplotlib
  contour viewer
- The default offset position of the ginga.canvas.util.ColorBar has been
  changed from 40 to 0--this makes the color bar obscure less of the
  image

--- a/ginga/examples/configs/plugin_Pick.cfg
+++ b/ginga/examples/configs/plugin_Pick.cfg
@@ -14,7 +14,18 @@ pixel_coords_offset = 0.0
 # Maximum side for a pick region
 max_side = 1024
 
-# For contour plot
+# For image cutout viewer ("Image" tab)
+# you can set autozoom and autocuts preferences
+cutout_autozoom = 'override'
+cutout_autocuts = 'off'
+
+# For contour plot ("Contour" tab)
+# widget type: let choose automatically or force 'ginga' or 'matplotlib'
+# (choice of 'ginga' requires scikit-image to be installed)
+contour_widget = 'choose'
+# if ginga widget is chosen, you can set autozoom and autocuts preferences
+contour_autozoom = 'override'
+contour_autocuts = 'override'
 num_contours = 8
 # How big of a radius are we willing to consider from the center of the
 # pick?  bigger numbers == slower
