--- a/setup.cfg
+++ b/setup.cfg
@@ -44,11 +44,11 @@ classifiers =
 [options]
 zip_safe = False
 packages = find:
-python_requires = >=3.7
+python_requires = >=3.8
 install_requires =
-    numpy>=1.14
+    numpy>=1.22
     qtpy>=2.0.1
-    astropy>=3.2
+    astropy>=5.0
     pillow>=9.2.0
     importlib-metadata ; python_version == '3.7'
 setup_requires = setuptools_scm
@@ -67,9 +67,12 @@ recommended =
 test = attrs>=19.2.0; pytest-astropy
 docs = sphinx-astropy; sphinx_rtd_theme
 gtk3 = pycairo; pygobject
-qt5 = PyQt5; QtPy>=1.1
-tk = aggdraw
-web = tornado; aggdraw
+qt5 = PyQt5
+qt6 = PyQt6
+pyside2 = PySide2
+pyside6 = PySide6
+tk = pycairo
+web = tornado; pycairo
 
 [options.package_data]
 ginga = examples/*/*, examples/*/*/*, web/pgw/js/*.js, web/pgw/js/*.css
