--- a/.github/workflows/ci_workflows.yml
+++ b/.github/workflows/ci_workflows.yml
@@ -53,7 +53,7 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
-        python-version: '3.8'
+        python-version: '3.11'
     - name: Install and build
       run: |
         python -m pip install --upgrade pip setuptools
@@ -74,11 +74,11 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
-        python-version: '3.7'
+        python-version: '3.8'
     - name: Install and build
       run: |
         python -m pip install --upgrade pip setuptools
-        python -m pip install PyQt5 numpy==1.16 astropy==3.2
+        python -m pip install PyQt5 numpy==1.21 astropy==5.0
         python -m pip install -e .[test]
     - name: Install Qt
       uses: jurplel/install-qt-action@c650b0c3306c1c46739f40ff0fe418af8c4ba02e  # v3.2.0
@@ -121,6 +121,7 @@ jobs:
     - name: Install and build
       run: |
         # $CONDA is an environment variable pointing to the root of the miniconda directory
+        $CONDA/bin/conda update -n base -c defaults conda
         $CONDA/bin/conda install pip setuptools setuptools_scm
         $CONDA/bin/conda install qtpy pyqt matplotlib
         $CONDA/bin/conda install attrs "astropy>=5.2" pytest-astropy -c conda-forge
