Fix readthedocs build due to sphinx incompatibility with RTD theme
- fix #1062

--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -18,6 +18,7 @@ sphinx:
 python:
   system_packages: false
   install:
+    - requirements: doc/requirements.txt
     - method: pip
       path: .
       extra_requirements:
