Add a confirmation dialog when the reference viewer is closed
- pops up a confirmation dialog that confirms you intend to quit
- adds support across backends
- can be overridden by adding a line to your general.cfg
- example general.cfg updated

--- a/ginga/examples/configs/general.cfg
+++ b/ginga/examples/configs/general.cfg
@@ -149,3 +149,6 @@ layout_file = 'layout.json'
 # Name of a file to configure the set of available plugins and where they
 # should appear
 plugin_file = 'plugins.json'
+
+# Confirm program exits with a dialog?
+confirm_shutdown = True
