TST: Use tox for CI except the conda one

--- a/setup.cfg
+++ b/setup.cfg
@@ -3,7 +3,6 @@ minversion = 5
 testpaths = "ginga" "doc"
 norecursedirs = build doc/_build
 astropy_header = true
-addopts = --doctest-ignore-import-errors
 filterwarnings =
     error
     ignore:numpy.ndarray size changed:RuntimeWarning
@@ -49,7 +48,7 @@ install_requires =
     numpy>=1.21
     qtpy>=2.0.1
     astropy>=5.0
-    pillow>=9.2.0
+    pillow>=9.2
 setup_requires = setuptools_scm
 
 [options.extras_require]
@@ -63,15 +62,33 @@ recommended =
     astroquery>=0.3.5
     docutils
     photutils
-test = attrs>=19.2.0; pytest-astropy
-docs = sphinx<7.0; sphinx-astropy; sphinx_rtd_theme
-gtk3 = pycairo; pygobject
-qt5 = PyQt5
-qt6 = PyQt6
-pyside2 = PySide2
-pyside6 = PySide6
-tk = pycairo
-web = tornado; pycairo
+test =
+    attrs>=19.2.0
+    pytest-astropy-header
+    pytest-doctestplus
+    pytest-remotedata
+    scipy
+    photutils
+docs =
+    sphinx<7.0
+    sphinx-astropy
+    sphinx_rtd_theme
+gtk3 =
+    pycairo
+    pygobject
+qt5 =
+    PyQt5
+qt6 =
+    PyQt6
+pyside2 =
+    PySide2
+pyside6 =
+    PySide6
+tk =
+    pycairo
+web =
+    tornado
+    pycairo
 
 [options.package_data]
 ginga = examples/*/*, examples/*/*/*, web/pgw/js/*.js, web/pgw/js/*.css
