--- a/.github/workflows/predeps_workflow.yml
+++ b/.github/workflows/predeps_workflow.yml
@@ -2,8 +2,6 @@ name: rc-testing
 
 on:
   workflow_dispatch:
-  # REMOVE ME
-  pull_request:
 
 # Cancel duplicate builds
 concurrency:
@@ -22,15 +20,18 @@ jobs:
       matrix:
         include:
           # Basic tests but with RC
-          - os: ubuntu-latest
+          - name: Test with Python 3.9 on Linux
+            os: ubuntu-latest
             python: '3.9'
             toxenv: py39-test-predeps
             toxposargs: -sv
-          - os: macos-latest
+          - name: Test with Python 3.10 on OSX
+            os: macos-latest
             python: '3.10'
             toxenv: py310-test-predeps
             toxposargs: -sv
-          - os: windows-latest
+          - name: Test with Python 3.11 on Windows
+            os: windows-latest
             python: '3.11'
             toxenv: py311-test-predeps
             toxposargs: -sv
@@ -44,9 +45,6 @@ jobs:
       uses: actions/setup-python@v4
       with:
         python-version: ${{ matrix.python }}
-    #- name: Install Qt
-    #  if: ${{ contains(matrix.toxenv,'-test') }}
-    #  uses: jurplel/install-qt-action@c650b0c3306c1c46739f40ff0fe418af8c4ba02e  # v3.2.0
     - name: Install Python dependencies
       run: |
         python -m pip install --upgrade pip tox
