devdeps: Force numpy dev to install
even after matplotlib forces a downgrade

--- a/tox.ini
+++ b/tox.ini
@@ -54,6 +54,8 @@ extras =
     qt5
 
 commands =
+    # Force numpy-dev after matplotlib downgrades it (https://github.com/matplotlib/matplotlib/issues/26847)
+    devdeps: python -m pip install --pre --upgrade --extra-index-url https://pypi.anaconda.org/scientific-python-nightly-wheels/simple nump
     pip freeze
     pytest --pyargs ginga {toxinidir}/doc {posargs}
 
