TST: Use pyerfa-dev for devdeps

--- a/tox.ini
+++ b/tox.ini
@@ -7,7 +7,7 @@ envlist =
 
 [testenv]
 setenv =
-    devdeps: PIP_EXTRA_INDEX_URL = https://pypi.anaconda.org/astropy/simple https://pypi.anaconda.org/scientific-python-nightly-wheels/simple
+    devdeps: PIP_EXTRA_INDEX_URL = https://pypi.anaconda.org/astropy/simple https://pypi.anaconda.org/liberfa/simple https://pypi.anaconda.org/scientific-python-nightly-wheels/simple
 
 # Pass through the following environemnt variables which are needed for the CI
 passenv = HOME,WINDIR,CC,CI
@@ -46,6 +46,7 @@ deps =
     devdeps: numpy>=0.0.dev0
     devdeps: scipy>=0.0.dev0
     devdeps: matplotlib>=0.0.dev0
+    devdeps: pyerfa>=0.0.dev0
     devdeps: astropy>=0.0.dev0
     devdeps: git+https://github.com/astropy/photutils@main#egg=photutils
 
