TST: Ignore dateutil deprecation warning about utcfromtimestamp in Python 3.12

--- a/setup.cfg
+++ b/setup.cfg
@@ -8,6 +8,8 @@ filterwarnings =
     ignore:numpy.ndarray size changed:RuntimeWarning
     ignore:numpy.ufunc size changed:RuntimeWarning
     ignore:distutils Version classes are deprecated:DeprecationWarning
+    # matplotlib + python-dateutil<=2.8.2 + Python 3.12
+    ignore:datetime\.datetime\.utcfromtimestamp:DeprecationWarning
 
 [bdist_wheel]
 universal = 1
