Renamed the mode "freepan" to "zoom"
- This is done to better reflect what the mode does when clicking the
  mouse buttons, or when using in a web widget.  The keyboard and mouse
  bindings remain the same.

- Users generally will not notice any change except that the mode indicator
  will show "zoom" instead of "freepan".  One function name is changed in
  the mode and if the user has a custom keyboard/mouse bindings, they may
  want to update theirs from the ginga/examples/bindings files.

--- a/setup.cfg
+++ b/setup.cfg
@@ -110,7 +110,7 @@ ginga_modes =
     meta = ginga.modes.meta:MetaMode
     draw = ginga.modes.draw:DrawMode
     pan = ginga.modes.pan:PanMode
-    freepan = ginga.modes.freepan:FreePanMode
+    zoom = ginga.modes.zoom:ZoomMode
     cuts = ginga.modes.cuts:CutsMode
     contrast = ginga.modes.contrast:ContrastMode
     rotate = ginga.modes.rotate:RotateMode
