Make cursors easily scalable
- added cursor_info module

--- a/setup.cfg
+++ b/setup.cfg
@@ -51,6 +51,7 @@ install_requires =
     qtpy>=2.0.1
     astropy>=5.0
     pillow>=9.2
+    tomli>=2.0.1; python_full_version < '3.11.0a7'
 setup_requires = setuptools_scm
 
 [options.extras_require]
@@ -98,6 +99,7 @@ ginga.doc = *.html
 ginga.fonts = */*.ttf, */*.txt
 ginga.gtk3w = gtk_css
 ginga.icons = *.ppm, *.png, *.svg
+ginga.cursors = *.svg, *.toml
 ginga.opengl = glsl/*.vert, glsl/*.frag
 ginga.web.pgw = templates/*.html, js/*.js
 
